testsuite/tests/type-data/should_fail/TDTagToEnum.stderr

TDTagToEnum.hs:10:5: error: [GHC-96189]
    • Bad call to tagToEnum# at type Letter
        Result type cannot be headed by a `type data` type
    • In the expression: tagToEnum# 0#
      In an equation for ‘f’: f = tagToEnum# 0#
